--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="rajapoker88, pkv games, poker qq, pkv mudah menang, situs poker online" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="">
-    <link rel="canonical" href="https://thewintersbaneshoppe.com/"><link rel="icon" type="image/png" href="//shakermen.myshopify.com/cdn/shop/files/PKVGAMES_Logo.png?crop=center&height=32&v=1706666605&width=32"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
+    <link rel="canonical" href="https://thewintersbaneshoppe.com/"><link rel="icon" type="image/png" href="//PKVGAMES_Logo.png?crop=center&height=32&v=1706666605&width=32"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       Rajapoker88 Daftar Situs Poker Online Server PKV Resmi di Indonesia
 </title>
 
@@ -21,8 +21,8 @@
 <meta property="og:url" content="https://thewintersbaneshoppe.com/">
 <meta property="og:title" content="Rajapoker88 Daftar Situs Poker Online Server PKV Resmi di Indonesia">
 <meta property="og:type" content="product">
-<meta property="og:description" content="RAJAPOKER88 atau biasa dikenal sebagai 10 daftar situs pkv games menyediakan permainan judi poker dan juga qq online terbaik dengan persentase kemenangan tertinggi dan saat ini situs pkv games menyediakan 16 jenis permainan qq yang bisa di mainkan hanya mendaftar 1 buah id kedalam situs pkv games."><meta property="og:image" content="http://shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197">
-  <meta property="og:image:secure_url" content="https://shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197">
+<meta property="og:description" content="RAJAPOKER88 atau biasa dikenal sebagai 10 daftar situs pkv games menyediakan permainan judi poker dan juga qq online terbaik dengan persentase kemenangan tertinggi dan saat ini situs pkv games menyediakan 16 jenis permainan qq yang bisa di mainkan hanya mendaftar 1 buah id kedalam situs pkv games."><meta property="og:image" content="http://https://s10.gifyu.com/images/SrK5I.png?v=1706677197">
+  <meta property="og:image:secure_url" content="https://https://s10.gifyu.com/images/SrK5I.png?v=1706677197">
   <meta property="og:image:width" content="650">
   <meta property="og:image:height" content="650"><meta property="og:price:amount" content="0,00">
   <meta property="og:price:currency" content="IDR"><meta name="twitter:card" content="summary_large_image">
@@ -934,7 +934,7 @@ for (var attr in meta) {
   style="--ratio: 1.0; --preview-ratio: 1.0;"
 >
   <noscript><div class="product__media media">
-        <img src="//shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1946" alt="" srcset="//shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=246 246w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=493 493w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=600 600w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=713 713w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=823 823w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=990 990w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1100 1100w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1206 1206w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1346 1346w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1426 1426w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1646 1646w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1946 1946w" width="1946" height="1946" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
+        <img src="//https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1946" alt="" srcset="//https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=246 246w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=493 493w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=600 600w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=713 713w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=823 823w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=990 990w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1100 1100w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1206 1206w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1346 1346w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1426 1426w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1646 1646w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1946 1946w" width="1946" height="1946" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
       </div></noscript>
 
   <modal-opener class="product__modal-opener product__modal-opener--image no-js-hidden" data-modal="#ProductModal-template--15429160599630__main">
@@ -968,7 +968,7 @@ for (var attr in meta) {
   </svg>
 </div>
 <div class="product__media media media--transparent">
-      <img src="//shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1946" alt="" srcset="//shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=246 246w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=493 493w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=600 600w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=713 713w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=823 823w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=990 990w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1100 1100w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1206 1206w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1346 1346w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1426 1426w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1646 1646w, //shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1946 1946w" width="1946" height="1946" class="image-magnify-lightbox" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
+      <img src="//https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1946" alt="" srcset="//https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=246 246w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=493 493w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=600 600w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=713 713w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=823 823w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=990 990w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1100 1100w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1206 1206w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1346 1346w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1426 1426w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1646 1646w, //https://s10.gifyu.com/images/SrK5I.png?v=1706677197&amp;width=1946 1946w" width="1946" height="1946" class="image-magnify-lightbox" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
     </div>
     <button class="product__media-toggle quick-add-hidden product__media-zoom-lightbox" type="button" aria-haspopup="dialog" data-media-id="23064732467278">
       <span class="visually-hidden">
@@ -1400,9 +1400,9 @@ for (var attr in meta) {
     >
 <img
     class="global-media-settings global-media-settings--no-shadow"
-    srcset="//shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&width=550 550w,//shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197 650w"
+    srcset="//https://s10.gifyu.com/images/SrK5I.png?v=1706677197&width=550 550w,//https://s10.gifyu.com/images/SrK5I.png?v=1706677197 650w"
     sizes="(min-width: 750px) calc(100vw - 22rem), 1100px"
-    src="//shakermen.myshopify.com/cdn/shop/files/https://s10.gifyu.com/images/SrK5I.png?v=1706677197&width=1445"
+    src="//https://s10.gifyu.com/images/SrK5I.png?v=1706677197&width=1445"
     alt="Rajapoker88 Daftar Situs Poker Online Server PKV Resmi di Indonesia"
     loading="lazy"
     width="1100"
